Add resource and bible view

--- a/www/templates/bible-content.html
+++ b/www/templates/bible-content.html
@@ -1,3 +1,6 @@
 <ion-view title="Bible">
-	<ion-content>{{content}}</ion-content>
+	<ion-content>
+		<ion-list ng-repeat="verb in content">{{verb}}</ion-list>
+	</ion-content>
+	
 </ion-view>
