--- a/www/templates/home-template.html
+++ b/www/templates/home-template.html
@@ -1,13 +1,17 @@
 
-<ion-content>
-	<div class="row">
-  		<div class="col col-book" ng-repeat="book in testBook" ng-click="showBook()">{{book.abbr}}</div>
-	</div>
 
-	<div class="button-bar">
-	    <a class="button button-outline button-positive" href="#/read">First</a>
-	    <a class="button button-outline button-positive">Second</a>
-	    <a class="button button-outline button-positive">Third</a>
-	</div>
+<ion-content>
+    <div class="card">
+        <div class="item item-text-wrap">
+            This is a basic Card which contains an item that has wrapping text.
+        </div>
+    </div>
+	<!--<div class="button-bar">-->
+	    <!--<a class="button button-outline button-positive" href="#/read">First</a>-->
+	    <!--<a class="button button-outline button-positive">Second</a>-->
+	    <!--<a class="button button-outline button-positive">Third</a>-->
+	<!--</div>-->
 </ion-content>
+
+
 
