--- a/www/css/style.css
+++ b/www/css/style.css
@@ -57,3 +57,8 @@
     background: #f7f7f7;
     text-align: center;
 }
+
+.card {
+    -webkit-box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow:         0 0 16px 0 rgba(0, 0, 0, 0.2);
+}
