--- a/www/css/style.css
+++ b/www/css/style.css
@@ -62,3 +62,30 @@
     -webkit-box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.2);
     box-shadow:         0 0 16px 0 rgba(0, 0, 0, 0.2);
 }
+
+.card .chapter{
+    font-size: 13px;
+    text-align: right;
+}
+
+.dark-overlay {
+    background-color: #222 !important;
+    opacity: 0.8;
+}
+.dark-item {
+    background-color: transparent !important;
+    color: #fff !important;
+    border-color: #444 !important;
+}
+.close-icon:before {
+    font-size: 40px !important;
+}
+.bar-clear {
+    background: none;
+}
+.overlay-spacer {
+    height: 100px;
+}
+.content-flush {
+    top: 0px !important;
+}
