--- a/www/templates/bible-list.html
+++ b/www/templates/bible-list.html
@@ -1,4 +1,4 @@
-<ion-popover-view ng-controller="BibleListCtrl" class="dark-overlay">
+<ion-modal-view ng-controller="BibleListCtrl" class="dark-overlay">
     <ion-header-bar class="bar-clear">
         <button class="button button-icon ion-ios7-close-empty close-icon pull-right"></button>
     </ion-header-bar>
@@ -10,4 +10,4 @@
             </ion-item>
         </ion-list>
     </ion-content>
-</ion-popover-view>
+</ion-modal-view>
