--- a/www/templates/bible-content.html
+++ b/www/templates/bible-content.html
@@ -3,7 +3,7 @@
 	<ion-side-menus>
 	    <ion-side-menu-content>
 	    	<ion-header-bar class="bar-dark">
-	    		<button class="button button-icon icon ion-navicon"></button>
+	    		<button class="button button-icon icon ion-navicon" ng-click="toggleLeft()"></button>
 		        <h1 class="title">{{title}} {{chapter}}장</h1>
 		    </ion-header-bar>
 		    <ion-content>
